--- a/index.html
+++ b/index.html
@@ -1656,12 +1656,6 @@ INFOTAINMENT PORTAL</span>
 					<div class="s-footer__main">
 						<div class="s-footer__contact">
 							<ul>
-								<!--<li>
-									<div class="heading">ΤΗΛΕΦΩΝΟ ΚΡΑΤΗΣΕΩΝ</div>
-									<div>
-										<a href="tel:+30 210 89 19 800" title="#">+30 210 89 19 800</a>
-									</div>
-								</li>-->
 								<li>
 									<div class="heading">EMAIL</div>
 									<div>
@@ -1676,14 +1670,14 @@ INFOTAINMENT PORTAL</span>
 								<div class="s-footer__menu__col">
 										<div class="heading">ΕΠΙΣΚΕΦΤΕΙΤΕ ΕΠΙΣΗΣ</div>
 
-										<!--<ul>
+										<ul>
 												<li>
-													<a href="http://www.attica-group.com" alt="Attica Group" target="_blank">Attica Group</a>
+													<a href="https://votes.projectpap.gq" alt="Project PAP Votes" target="_blank">Ψηφίστε στα live μας</a>
 												</li>
 												<li>
-													<a href="https://www.superfast.com/adriatiki/el/" alt="Superfast Ferries (Ελλάδα - Ιταλία)" target="_blank">Superfast Ferries (Ελλάδα - Ιταλία)</a>
+													<a href="https://blog.projectpap.gq" alt="Project PAP Blog" target="_blank">Το Blog μας</a>
 												</li>
-												<li>
+												<!--<li>
 													<a href="https://www.attica-group.com/el/%ce%b5%cf%84%ce%b1%ce%b9%cf%81%ce%b9%ce%ba%ce%b7-%cf%85%cf%80%ce%b5%cf%85%ce%b8%cf%85%ce%bd%ce%bf%cf%84%ce%b7%cf%84%ce%b1/upeuthinotita.html" alt="Εταιρική Υπευθυνότητα" target="_blank">Εταιρική Υπευθυνότητα</a>
 												</li>
 												<li>
@@ -1697,8 +1691,8 @@ INFOTAINMENT PORTAL</span>
 												</li>
 												<li>
 													<a href="https://www.booking.com/index.el.html?aid=1648997" alt="Booking.com" target="_blank">Booking.com</a>
-												</li>
-																					</ul>-->
+												</li>-->
+																					</ul>
 								</div>
 								<div class="s-footer__menu__col">
 										<div class="heading">ΓΡΗΓΟΡΗ ΠΡΟΣΒΑΣΗ</div>
@@ -1743,7 +1737,7 @@ INFOTAINMENT PORTAL</span>
 
 										<ul class="devices-expanded">
 												<li>
-													<a href="#" alt="Πολιτική απορρήτου">Πολιτική απορρήτου (Προσωρινά μη διαθέσιμο)</a>
+													<a href="privacy" alt="Πολιτική απορρήτου">Πολιτική απορρήτου</a>
 												</li>
 												<!--<li>
 													<a href="/el-gr/enimerosi-gia-cctv" alt="Ενημέρωση για CCTV">Ενημέρωση για CCTV</a>
